# claude-ago-25

./: .gitignore  CLAUDE.md  COMO_CONFIGUREI_MCP_RAG_SERVER.md  PLANO_REVOLUCIONARIO_MCP_RAG.md  a2a-urls-metadata.json  add-urls-to-frontend.txt  auto-sync-server.py  batch-index-a2a.py  check_todo_conflicts.sh  frontend-integration.tsx  frontend-rag-improvements.md  index-a2a-commands.txt  ingest_a2a_docs.py  organize_todos.sh  session_contexts.json  simple-sync-server.py  start-websocket-sync.sh  sync-mcp-to-frontend.py  sync-rag-frontend.py  test_snapshot_benefits.md  teste-modal-rag.html  websocket-sync-server.py
docs/: A2A_PROTOCOL_CONSOLIDATED_GUIDE.md  RAG_SERVER_MCP_GUIDE.md  README.md  REATIVAR_MCP_RAG_SERVER.md  TODO_USAGE_GUIDE.md  (+3 more)
docs/curso-a2a-helloworld/helloworld/: Containerfile  README.md  __init__.py  a2a-server.js  agent_executor.py  app.py  app_new.py  create_task.json  explicacao_detalhada.md  guardian_main.py  main_helloworld.py  package-lock.json  package.json  pedido_client.py  proxy_server.py  pyproject.toml  run-server.sh  send_message.json  server-stable.js  server.py  simple-server.js  simulador.html  start.sh  start_helloworld.sh  stop_helloworld.sh  task_response.json
docs/curso-a2a-helloworld/helloworld/.claude-flow/metrics/: performance.json  task-metrics.json
docs/curso-a2a-helloworld/helloworld/.well-known/: agent.json
docs/curso-a2a-helloworld/helloworld/agent_cards/: helloworld_agent.json
docs/curso-a2a-helloworld/helloworld/scripts/: stop_helloworld.sh
docs/curso-a2a-helloworld/helloworld/specification/: a2a-config.json
(+324 files in other folders)
